# lab1_fp

./: .gitignore  README.md
.github/workflows/: ci.yml
lab1/: .gitignore  README.md  SETUP.md  Беля_ФП_1.odt
lab1/java/: pom.xml
lab1/java/src/main/java/com/euler/: Main.java  Task26Cycles.java  Task4Palindrome.java
lab1/java/src/test/java/com/euler/: Task26CyclesTest.java  Task4PalindromeTest.java
lab1/ocaml/: dune-project
lab1/ocaml/lib/: dune
lab1/ocaml/lib/task26_cycles/: dune  task26_imperative.ml  task26_lazy.ml  task26_map.ml  task26_mix.ml  task26_recursion.ml  utils.ml
lab1/ocaml/lib/task4_palindrome/: dune  task4_fold.ml  task4_imperative.ml  task4_lazy.ml  task4_map.ml  task4_recursion.ml  utils.ml
lab1/ocaml/test/: dune  test_task26.ml  test_task4.ml
